# guesthouse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
configuration/chproxy/: template.yml
guesthouse/: app.py  chproxy.py  clickhouse.py  gc.py  logger.py  models.py  settings.py  username.py  utilities.py
tests/: conftest.py  test_guesthouse.py
