[tool.poetry]
name = "guesthouse"
version = "0.1.0"
description = "Generate temporary ClickHouse credentials."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pych-client = "^0.4.1"
PyYAML = "^6.0"
uvicorn = "^0.18.3"
pytest = "^7.1.2"
anyio = "<4"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
requests = "^2.28.1"
types-PyYAML = "^6.0.11"

[tool.pytest.ini_options]
addopts = "--capture=no --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
